--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                 <h2>Fetched Value</h2>
                 <p class="reading"><span id="valueContainer">NaN</span></p>
                 <p class="gray-label">Last reading: <span id="timestamp"></span></p>
+                <p class="r1gray-label">Last reading: <span id="timestamp"></span></p>
+
             </div>
 
             <div class="card">
@@ -45,7 +47,7 @@
                 <h2>Control GPIO 25</h2>
                 <button id="r1onButton" class="r1onButton">ON</button>
                 <button id="r1offButton" class="r1offButton">OFF</button>
-                <p class="gray-label">Last value sent: <span id="valueSent"></span></p>
+                <p class="r1gray-label">Last value sent: <span id="valueSent"></span></p>
             </div>
         </div>
     </div>
