--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
             <div class="card">
                 <h2>Fetched Value</h2>
                 <p class="reading"><span id="valueContainer">NaN</span></p>
-                <p class="gray-label">Last reading: <span id="timestamp"></span></p>
-                <p class="r1gray-label">Last reading: <span id="timestamp"></span></p>
-
+                <p class="gray-label">Last reading: <span id="timestamp"></span></p
             </div>
 
             <div class="card">
