--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2>Control GPIO 25</h2>
                 <button id="r1onButton" class="r1onButton">ON</button>
                 <button id="r1offButton" class="r1offButton">OFF</button>
-                <p class="r1gray-label">Last value sent: <span id="valueSent"></span></p>
+                <p class="r1-gray-label">Last value sent: <span id="valueSent"></span></p>
             </div>
         </div>
     </div>
