--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <h2>Control GPIO 2</h2>
                 <button id="onButton" class="onButton">ON</button>
                 <button id="offButton" class="offButton">OFF</button>
-                <p class="gray-label">Last value sent: <span id="valueSent"></span></p>
-           
+                       
                 <h2>Control GPIO 25</h2>
                 <button id="r1onButton" class="r1onButton">ON</button>
                 <button id="r1offButton" class="r1offButton">OFF</button>
-                <p class="r1-gray-label">Last value sent: <span id="valueSent"></span></p>
+                <p class="gray-label">Last value sent: <span id="valueSent"></span></p> 
+                //  <p class="r1-gray-label">Last value sent: <span id="valueSent"></span></p>
             </div>
         </div>
     </div>
