--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 <button id="onButton" class="onButton">ON</button>
                 <button id="offButton" class="offButton">OFF</button>
                        
-                <h2>Control GPIO 23</h2>
+                <h2>Control Relay 1</h2>
                 <button id="r1onButton" class="r1onButton">ON</button>
                 <button id="r1offButton" class="r1offButton">OFF</button>
 
-                <h2>Control GPIO 22</h2>
-                <button id="r1onButton" class="r2onButton">ON</button>
-                <button id="r1offButton" class="r2offButton">OFF</button>
+                <h2>Control Relay 2</h2>
+                <button id="r2onButton" class="r2onButton">ON</button>
+                <button id="r2offButton" class="r2offButton">OFF</button>
 
-                <h2>Control GPIO 25</h2>
-                <button id="r1onButton" class="r3onButton">ON</button>
-                <button id="r1offButton" class="r3offButton">OFF</button>
+                <h2>Control Relay 3</h2>
+                <button id="r3onButton" class="r3onButton">ON</button>
+                <button id="r3offButton" class="r3offButton">OFF</button>
 
-                <h2>Control GPIO 26</h2>
-                <button id="r1onButton" class="r4onButton">ON</button>
-                <button id="r1offButton" class="r4offButton">OFF</button>
+                <h2>Control Relay 4</h2>
+                <button id="r4onButton" class="r4onButton">ON</button>
+                <button id="r4offButton" class="r4offButton">OFF</button>
               
                 <p class="gray-label">Last value sent: <span id="valueSent"></span></p> 
             </div>
