--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="card">
-                <h2>Control GPIO 2</h2>
+                <h2>All Lights</h2>
                 <button id="onButton" class="onButton">ON</button>
                 <button id="offButton" class="offButton">OFF</button>
                        
