--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="card">
                 <h2>Connection Time (secs)</h2>
                 <p class="reading"><span id="valueContainer">NaN</span></p>
-                <p class="gray-label">Last reading: <span id="timestamp"></span></p
+                <p class="gray-label">Last reading: <span id="timestamp"></span></p>
             </div>
 
             <div class="card">
