--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
             bleServiceFound.getCharacteristic(ledCharacteristic)
             .then(characteristic => {
                 console.log("Found the LED characteristic: ", characteristic.uuid);
-//                const data = new Uint8Array([value]);
-                 const data = new String([value]);
+                const data = new Uint8Array([value]);
+//                 const data = new String([value]);
                  return characteristic.writeValue(data);
             })
             .then(() => {
