--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 				<img height="30"  width="30" id="AllLights"  src="LEDoff.png"/> <br />	
 				
 				<h2><pre class="tab4"> Driver Side    Passenger Side</pre></h2>
-                <button id="DSonButton" class="DSonButton" onclick="changeImageD('LED.png')">ON</button>
-                <button id="DSoffButton" class="DSoffButton" onclick="changeImageD('LEDoff.png')">OFF</button>
+                <button id="DSonButton" class="DSonButton" onclick="changeImageDS('LED.png')">ON</button>
+                <button id="DSoffButton" class="DSoffButton" onclick="changeImageDS('LEDoff.png')">OFF</button>
 				<img height="30"  width="30" id="DrvrLights"  src="LEDoff.png"/> 
-				<button id="PSonButton" class="PSonButton" onclick="changeImageP('LED.png')">ON</button>
-                <button id="PSoffButton" class="PSoffButton" onclick="changeImageP('LEDoff.png')">OFF</button>
+				<button id="PSonButton" class="PSonButton" onclick="changeImagePS('LED.png')">ON</button>
+                <button id="PSoffButton" class="PSoffButton" onclick="changeImagePS('LEDoff.png')">OFF</button>
 				<img height="30"  width="30" id="PassLights"  src="LEDoff.png"/> <br />	
                        
                 <h3>Control Relay 1</h3>
