--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             .then(characteristic => {
                 console.log("Found the LED characteristic: ", characteristic.uuid);
                 const data = new Uint8Array([value]);
-                return characteristic.writeValue(value);
+                return characteristic.writeValue(data);
             })
             .then(() => {
                 latestValueSent.innerHTML = value;
