--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <!-- <pre class="tab4"> Driver Side    Passenger Side</pre>	-->
 			
-				<h2> <pre class="tab4"> Driver Side    Passenger Side</pre> </h2>
+				<h2> <pre class="tab4"> Drvr Side    Passngr Side</pre> </h2>
                 <button id="DSonButton" class="DSonButton" onclick="changeImageDS('LED.png')">ON</button>
                 <button id="DSoffButton" class="DSoffButton" onclick="changeImageDS('LEDoff.png')">OFF</button>
 				<img height="20"  width="20" id="DrvrLights"  src="LEDoff.png"/> 
